--- a/deshifr.ipynb
+++ b/deshifr.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "def count_symbols() -> list:\n",
@@ -55,6 +55,7 @@
     "        dict_simvols[item] = simvols[item]\n",
     "        print(item, simvols[item])\n",
     "    dict_simvols = dict(sorted(dict_simvols.items(), key=lambda x: x[1]))\n",
+    "    print(\"Упорядоченные буквы по возрастанию частоты\")\n",
     "    print(dict_simvols)\n",
     "    x = list(dict_simvols.keys())\n",
     "    print(x)\n",
@@ -66,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -109,6 +110,7 @@
       "a 0.0038461538461538464\n",
       "Ь 0.0019230769230769232\n",
       "Ы 0.0019230769230769232\n",
+      "Упорядоченные буквы по возрастанию частоты\n",
       "{'̆': 0.0019230769230769232, 'Ь': 0.0019230769230769232, 'Ы': 0.0019230769230769232, 'Ч': 0.0038461538461538464, '?': 0.0038461538461538464, 'П': 0.0038461538461538464, 'a': 0.0038461538461538464, '5': 0.0057692307692307696, '>': 0.0057692307692307696, 'И': 0.0057692307692307696, 'У': 0.009615384615384616, '1': 0.013461538461538462, 'Ф': 0.013461538461538462, 't': 0.015384615384615385, '<': 0.015384615384615385, '4': 0.01730769230769231, '7': 0.019230769230769232, ' ': 0.019230769230769232, 'Б': 0.025, 'Р': 0.025, 'Д': 0.026923076923076925, 'Е': 0.03076923076923077, 'К': 0.032692307692307694, 'b': 0.03653846153846154, '2': 0.04038461538461539, 'О': 0.04423076923076923, 'Л': 0.05384615384615385, 'r': 0.057692307692307696, 'М': 0.06923076923076923, '8': 0.07115384615384615, 'Х': 0.08846153846153847, 'А': 0.1, 'c': 0.13653846153846153}\n",
       "['̆', 'Ь', 'Ы', 'Ч', '?', 'П', 'a', '5', '>', 'И', 'У', '1', 'Ф', 't', '<', '4', '7', ' ', 'Б', 'Р', 'Д', 'Е', 'К', 'b', '2', 'О', 'Л', 'r', 'М', '8', 'Х', 'А', 'c']\n"
      ]
@@ -117,7 +119,7 @@
      "data": {
       "text/plain": "['̆',\n 'Ь',\n 'Ы',\n 'Ч',\n '?',\n 'П',\n 'a',\n '5',\n '>',\n 'И',\n 'У',\n '1',\n 'Ф',\n 't',\n '<',\n '4',\n '7',\n ' ',\n 'Б',\n 'Р',\n 'Д',\n 'Е',\n 'К',\n 'b',\n '2',\n 'О',\n 'Л',\n 'r',\n 'М',\n '8',\n 'Х',\n 'А',\n 'c']"
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "ALF = ['х', 'щ', 'ю', 'б', '-', 'ц', 'ф', 'г', 'э', 'ж', 'з', 'й', 'ч', 'у', 'ь', 'д', 'ы', 'в', 'п', 'л', 'м', 'р',\n",
@@ -158,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "def chenging(new_text: str) -> str:\n",
@@ -184,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
@@ -224,6 +226,7 @@
       "a 0.0038461538461538464\n",
       "Ь 0.0019230769230769232\n",
       "Ы 0.0019230769230769232\n",
+      "Упорядоченные буквы по возрастанию частоты\n",
       "{'̆': 0.0019230769230769232, 'Ь': 0.0019230769230769232, 'Ы': 0.0019230769230769232, 'Ч': 0.0038461538461538464, '?': 0.0038461538461538464, 'П': 0.0038461538461538464, 'a': 0.0038461538461538464, '5': 0.0057692307692307696, '>': 0.0057692307692307696, 'И': 0.0057692307692307696, 'У': 0.009615384615384616, '1': 0.013461538461538462, 'Ф': 0.013461538461538462, 't': 0.015384615384615385, '<': 0.015384615384615385, '4': 0.01730769230769231, '7': 0.019230769230769232, ' ': 0.019230769230769232, 'Б': 0.025, 'Р': 0.025, 'Д': 0.026923076923076925, 'Е': 0.03076923076923077, 'К': 0.032692307692307694, 'b': 0.03653846153846154, '2': 0.04038461538461539, 'О': 0.04423076923076923, 'Л': 0.05384615384615385, 'r': 0.057692307692307696, 'М': 0.06923076923076923, '8': 0.07115384615384615, 'Х': 0.08846153846153847, 'А': 0.1, 'c': 0.13653846153846153}\n",
       "['̆', 'Ь', 'Ы', 'Ч', '?', 'П', 'a', '5', '>', 'И', 'У', '1', 'Ф', 't', '<', '4', '7', ' ', 'Б', 'Р', 'Д', 'Е', 'К', 'b', '2', 'О', 'Л', 'r', 'М', '8', 'Х', 'А', 'c']\n",
       "{}\n",
@@ -260,6 +263,7 @@
       "a 0.0038461538461538464\n",
       "Ь 0.0019230769230769232\n",
       "Ы 0.0019230769230769232\n",
+      "Упорядоченные буквы по возрастанию частоты\n",
       "{'̆': 0.0019230769230769232, 'Ь': 0.0019230769230769232, 'Ы': 0.0019230769230769232, 'Ч': 0.0038461538461538464, '?': 0.0038461538461538464, 'П': 0.0038461538461538464, 'a': 0.0038461538461538464, '5': 0.0057692307692307696, '>': 0.0057692307692307696, 'И': 0.0057692307692307696, 'У': 0.009615384615384616, '1': 0.013461538461538462, 'Ф': 0.013461538461538462, 't': 0.015384615384615385, '<': 0.015384615384615385, '4': 0.01730769230769231, '7': 0.019230769230769232, ' ': 0.019230769230769232, 'Б': 0.025, 'Р': 0.025, 'Д': 0.026923076923076925, 'Е': 0.03076923076923077, 'К': 0.032692307692307694, 'b': 0.03653846153846154, '2': 0.04038461538461539, 'О': 0.04423076923076923, 'Л': 0.05384615384615385, 'r': 0.057692307692307696, 'М': 0.06923076923076923, '8': 0.07115384615384615, 'Х': 0.08846153846153847, 'А': 0.1, 'c': 0.13653846153846153}\n",
       "['̆', 'Ь', 'Ы', 'Ч', '?', 'П', 'a', '5', '>', 'И', 'У', '1', 'Ф', 't', '<', '4', '7', ' ', 'Б', 'Р', 'Д', 'Е', 'К', 'b', '2', 'О', 'Л', 'r', 'М', '8', 'Х', 'А', 'c']\n",
       "даже неспециалисту ясно что в том числе и по этой причине рле не представляется оптимальнм алгоритмом сжатия- поскольку он не использует никакой информации о сжимаемом тексте- чтоб понять как происфходит сжатие использующее знания о тексте вернемся к понятиям энтропии и информативности текста  связь между вероятностями и кодами изучается в алгебраической теории кодирования основной теорией которой является никто иной как клод элвуд шеннон его теорем кодирования источника используются очень активно и здесь\n"
@@ -284,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "def write_text(TEXT):\n",
@@ -297,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "outputs": [],
    "source": [
     "write_text(TEXT)"
@@ -317,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "outputs": [
     {
      "name": "stdout",
@@ -330,6 +334,15 @@
    "source": [
     "print(TEXT)"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
